# SNAPKITTYWEST

./:  LANGUAGE-CATALOG.md  .gitignore  .gitmodules  AGENTS_SUMMARY.md  BREAKING_THE_WESTERN_WALL.md  EPISODE_01.md  HANDOFF_CODEX_SWEEP_CLEANUP.md  IMPLEMENTATION_STATUS.md  MIGRATION_QUEUE.csv  RD_TAX_CREDIT_DOCUMENTATION.md  README-2.md  README-ROUTER.md  README.md  REFACTOR_PLAN.md  REPO_REGISTRY.json  SOVEREIGN_SOURCE_LICENSE.md  SOVEREIGN_SOURCE_LICENSE_V3.md  SWARM_CAMPAIGN.md  UNIVERSE.md  agent-registry.json  build_booklet.py  edaulc_simulation_results.json  gen_art.py  kernel-registry.json  megtron-chat.html  omega-field.mjs  package-lock.json  package.json  requirements.txt  router-server.mjs  router-ui.html  sovereign-glue.rexx  sovereign-router.ts  stdout.txt  supleq_simulation_results.json  tools.ts  tsconfig.json  vault.sealed.json  vault.ts  web-verify.d.ts  (+1 more)
.github/: CONTRIBUTORS.md
.github/workflows/: graveyard-resurrect.yml  monorepo-verify.yml  orbital-pages.yml  sovereign-swarm.yml  swarm.yml
.qwen/: settings.json
.worm/: router-chain.jsonl  sovereign-mesh-patched.js  sovereign-mesh.multipart
S_AUTOCODE/: README.md  SAUTOCODE.lean  lake-manifest.json  lakefile.toml
S_AUTOCODE/SAUTOCODE/: CheckI4.lean  CheckI4_56.lean  MTheory.lean
bob-reasoning-engine/: BOOK_OF_WISDOM.md  TRS.md  wire.mjs
bob-reasoning-engine/apl/: SacredGeometry.apl
docs/: EXCLUSIVE_PROOF_PORTFOLIO.md  NOVEL_THEOREMS.md  index.html  polycentria.html  router.html
env-ship/: README.md
env-ship-public/: README.md
inverted-turbo/: .gitignore  Cargo.toml  README.md  cabal.project
inverted-turbo/.github/workflows/: build.yml
inverted-turbo/datalog/: engine.mjs
inverted-turbo/datalog/facts/: generated.dl
inverted-turbo/datalog/fixtures/: smoke_test_quantum.dl
inverted-turbo/datalog/rules/: agent_mesh.dl  build_verification.dl  code_safety.dl  quantum_linearity.dl
inverted-turbo/datalog/scripts/: generate_facts.mjs
inverted-turbo/haskell/pnp-core/: pnp-core.cabal
inverted-turbo/haskell/pnp-core/src/PnP/: Claim.hs  Convergence.hs  Problem.hs  Registry.hs  Solution.hs  Verify.hs
inverted-turbo/haskell/pnp-core/test/: Spec.hs
inverted-turbo/haskell/sovereign-twin/: sovereign-twin.cabal
inverted-turbo/haskell/sovereign-twin/app/: Main.hs
inverted-turbo/haskell/sovereign-twin/src/SovereignTwin/: AST.hs  ComeFrom.hs  ComputableRefinement.hs  HEq.hs  InvertedBlock.hs  Kernel.hs  Resonance.hs  RexxDaemon.hs  SExp.hs  Transport.hs
inverted-turbo/lean/: InvertedTurbo.lean  lake-manifest.json  lakefile.lean
inverted-turbo/lean/InvertedTurbo/Metaprogram/: Basic.lean
inverted-turbo/nix/: flake.nix
inverted-turbo/rust/sovereign-daemon/: Cargo.toml
inverted-turbo/rust/sovereign-daemon/src/: datalog.rs  gate.rs  main.rs  plasma.rs
magmad/: Cargo.toml
nft_collection/: worm_glitch
paper/: AHMAD_RYAN_VAN_GELDER_CONVERSATION.md  ERE_PIPELINE_PAPER.md  EXO_SYNCHRONICITY_TECHNICAL_PAPER.md  FORTY_TWO_LANGUAGES.md  NOVEL_FINDINGS_PUBLIC_STATEMENT.md  PAPER.html  PAPER.md  PIRTM_PATTERN_MATCH.md  RESONANCE_BLOCK_PAPER.md  RYAN_REACHER_ANALYSIS.md  RYAN_REACHER_PIRTM_THEFT.md  RYAN_VAN_GELDER_PROFILE.md  SUBLEQ_49TH_CALL_PAPER.md  TRUST_ARCHITECTURES_AND_SOFT_CAPTURE.md  VERSION_RELEASE_LOG.md  WAKING_THE_IMMUNE_SYSTEM.md  add_citation.py  add_citation2.py  add_citation3.py  count_pages.py  edaulc_simulator.py  fix_backtick.py  generate_ere_combined.py  generate_final_paper.py  generate_paper_pdf.py  generate_pdf.py  generate_proof_stack_paper.py  generate_redbook.py  generate_resonance_pdf.py  subleq_49th_call.py  verify_pdf.py
resonance-block/: CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  assembly-report.json  package.json  resonance-block.json
scripts/: archive-sweep.mjs  build-all-components.ps1  build-all-components.sh  build-all.ps1  build-all.sh
snakltalk/: test.mjs
snapkitty-mathrosetta/: .gitignore  Cargo.toml  README.md
snapkitty-mathrosetta/src/: ast.rs  lib.rs  normalizer.rs
snapkitty-mathrosetta/src/parser/: latex.rs
sovereign-array/: README.md
sovereign-array-frontend/: README.md  index.html
sovereign-compute/: README.md
sovereign-goldilocks/: Cargo.toml  README.md
sovereign-goldilocks/src/: field.rs  lib.rs  resonance.rs  uref.rs
sovereign-goldilocks/tests/: integration.rs
sovereign-judge/: sovereign_judge.c  sovereign_judge.h
sovereign-llm/: Cargo.toml  LICENSE  README.md
sovereign-llm/crates/server/: Cargo.toml
sovereign-llm/crates/server/src/: main.rs  persona.rs
sovereign-utqc/: Cargo.toml
sovereign-utqc/cpp/: CMakeLists.txt
sovereign-utqc/cpp/admissibility/: CMakeLists.txt
sovereign-utqc/cpp/contractivity/: CMakeLists.txt
sovereign-utqc/cpp/lean-ffi/: CMakeLists.txt
sovereign-utqc/cpp/multiplicity/: CMakeLists.txt
sovereign-utqc/cpp/pirtm-llvm/: CMakeLists.txt
sovereign-utqc/cpp/pirtm-mlir/: CMakeLists.txt
sovereign-utqc/cpp/sedona-spine/: CMakeLists.txt
sovereign-utqc/cpp/zeno-finton/: CMakeLists.txt
sovereign-utqc/crates/sovereign-field-simd/: Cargo.toml
sovereign-utqc/crates/sovereign-field-simd/src/: lib.rs
sovereign-utqc/crates/sovereign-gitbucket/: Cargo.toml
sovereign-utqc/crates/sovereign-gitbucket/proptest-regressions/: lib.txt  prolog.txt
sovereign-utqc/crates/sovereign-gitbucket/src/: lib.rs  prolog.rs
sovereign-utqc/crates/sovereign-pcsel/: Cargo.toml
sovereign-utqc/crates/sovereign-pcsel/src/: lib.rs
sovereign-utqc/crates/sovereign-phdae/: Cargo.toml
sovereign-utqc/crates/sovereign-phdae/src/: audit.rs  axiom.rs  lambda_loss.rs  lib.rs  matrix.rs  solver.rs  tensor.rs  zeta_hamiltonian.rs
sovereign-utqc/crates/sovereign-prime-fock/: Cargo.toml
sovereign-utqc/crates/sovereign-prime-fock/src/: lib.rs
sovereign-utqc/crates/sovereign-reg-hom/: Cargo.toml
sovereign-utqc/crates/sovereign-reg-hom/src/: lib.rs
sovereign-utqc/crates/sovereign-subleq/: Cargo.toml
sovereign-utqc/crates/sovereign-subleq/src/: lib.rs
tmp/: apple.html  nasa_push.py  push_apple.py  woz_prs.py
tripwire/: intercal.ICK  ryan-identity.md  ryan-monitor.mjs  tripwire-state.json
(+216 files in other folders)
