[workspace]
resolver = "2"
members = [
  "rust/pnp-attack",
  "rust/sovereign-daemon",
]

[workspace.package]
edition = "2021"
authors = ["SnapKitty Agent OS"]
license = "LicenseRef-SovereignSourceLicense"

[workspace.dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
