[package]
name = "sovereign-goldilocks"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Collective"]
description = "Sovereign Goldilocks Compute — reverse-engineered from apex-goldilocks. Boundary lattice, resonance words, prime-indexed arithmetic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SNAPKITTYWEST/SNAPKITTYWEST"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
