[package]
name = "sovereign-daemon"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Sovereign Twin daemon — resonance block processing + COME FROM dispatch"

[[bin]]
name = "sovereign-daemon"
path = "src/main.rs"

[dependencies]
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
