[package]
name = "sovereign-field-simd"
version.workspace = true
edition.workspace = true
description = "SIMD-accelerated Goldilocks field with SSE2/AVX2 feature gates"
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["scalar"]
simd = []
scalar = []

[lints.rust]
unsafe_code = "allow"
missing-docs = { level = "warn", priority = -1 }
unreachable-pub = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
