[package]
name = "sovereign-gitbucket"
version.workspace = true
edition.workspace = true
description = "GitBucket integration: deterministic memory extraction from git history, WORM-sealed memory buckets, Prolog-ready fact base"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
proptest.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing-docs = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
