[package]
name = "sovereign-pcsel"
version.workspace = true
edition.workspace = true
description = "PCSEL Projectors: orthogonal projectors onto prime class eigenspaces, resolution of identity"
license.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
proptest.workspace = true
utqc-goldilocks.workspace = true
sovereign-boundary-lattice.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing-docs = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
