[package]
name = "sovereign-phdae"
version.workspace = true
edition.workspace = true
description = "Sovereign Port-Hamiltonian DAE kernel: structure-preserving types, implicit Radau IIA, WORM audit"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
proptest.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[lints.rust]
unsafe_code = "forbid"
missing-docs = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
