[package]
name = "sovereign-prime-fock"
version.workspace = true
edition.workspace = true
description = "Prime Fock Space: F = ⊕_p F_p, creation/annihilation operators, number states, prime-indexed tensor products"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
proptest.workspace = true
utqc-goldilocks.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing-docs = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
