[package]
name = "sovereign-subleq"
version.workspace = true
edition.workspace = true
description = "SUBLEQ Gate: subtract-and-branch-if-less-or-equal, phase-encoded quantum variant, WORM audit"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
proptest.workspace = true
utqc-core.workspace = true
utqc-goldilocks.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing-docs = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg-macro = "deny"
